Simulators/CTD: TODO

--- a/etc/simulation/ocTree.ini
+++ b/etc/simulation/ocTree.ini
@@ -29,10 +29,11 @@
 
 [ocTree]
 
-Latitude (degrees)  = 41.159804
-Longitude (degrees) = -8.693256
+Latitude (degrees)  = 0.71881387
+Longitude (degrees) = -0.15195186
 
-3D_Data = 2136.08 -2170.77 10.19 16.53 1.32,
+3D_Data = 0 0 0 2 3,
+          2136.08 -2170.77 10.19 16.53 1.32,
           1957.75 -2241.01 10.76 15.54 16.39,
           2113.24 -2398.86 51.67 18.77 9.26,
           2119.38 -1931.53 97.68 14.07 19.85,
