Config: add configuration

--- a/etc/test.ini
+++ b/etc/test.ini
@@ -1,5 +1,6 @@
 [CrawlerSerial]
 Enabled                                 = Always
-Serial Port - Device                    = /dev/ttyUSB
-Serial Port - Baud Rate                 = 
-Input Timeout                           = 
+Serial Port - Device                    = /dev/ttyUSB0
+Serial Port - Baud Rate                 = 115200
+Input timeout                           = 2
+Entity Label                            = CrawlerSerial
