Implementation of comms protocol with checksum

--- a/etc/test.ini
+++ b/etc/test.ini
@@ -1,6 +1,7 @@
 [CrawlerSerial]
 Enabled                                 = Always
-Serial Port - Device                    = /dev/ttyUSB0
-Serial Port - Baud Rate                 = 115200
-Input timeout                           = 2
 Entity Label                            = CrawlerSerial
+Debug Level                             = Spew
+Serial Port - Device                    = /dev/ttyACM1
+Serial Port - Baud Rate                 = 115200
+Input Timeout                           = 3.0
