CrawlerSerial: fixed an error in message sending via serial port and tested pwm with a servo

--- a/etc/test.ini
+++ b/etc/test.ini
@@ -2,6 +2,10 @@
 Enabled                                 = Always
 Entity Label                            = CrawlerSerial
 Debug Level                             = Spew
-Serial Port - Device                    = /dev/ttyACM1
+Serial Port - Device                    = /dev/ttyACM0
 Serial Port - Baud Rate                 = 115200
 Input Timeout                           = 3.0
+
+; [Test.Crawler]
+; Enabled = Always
+; Entity Label = Producer  
