CrawlerSerial: added additional teleop buttons

--- a/etc/auv/control.ini
+++ b/etc/auv/control.ini
@@ -168,7 +168,7 @@ Active - Scope                          = maneuver
 Active - Visibility                     = developer
 Activation Time                         = 0
 Deactivation Time                       = 0
-Debug Level                             = None
+Debug Level                             = Debug
 Execution Priority                      = 10
 Execution Frequency                     = 10
 Connection Timeout                      = 2.0
@@ -179,6 +179,7 @@ EstimatedState Timeout                  = 2.0
 Force Torque Control                    = false
 Maximum Thruster Actuation              = 0.70
 Disable Analog Thrust                   = false
+Additional Actions                      = Lights=Axis, VolumeUp=Button, VolumeDown=Button,
 
 [Control.AUV.Diving]
 Enabled                                 = Hardware
