--- a/etc/lauv-nemo-1.ini
+++ b/etc/lauv-nemo-1.ini
@@ -43,6 +43,8 @@
 [Require hardware/lctr-a6xx/sadc.ini]
 [Require hardware/lctr-a6xx/seatrac.ini]
 
+[Require test.ini]
+
 ############################################################################
 # Vehicle specific overrides                                               #
 ############################################################################
@@ -178,6 +180,7 @@ Enabled                                 = Always
 Port                                    = 6003
 
 [Transports.UDP]
+Transports                              += RemoteActions
 Filtered Entities                       = CpuUsage:Daemon,
                                           Distance:Altimeter+DVL Filtered+Echo Sounder,
                                           Temperature:CTD+Depth Sensor+BATMAN,
