CrawlerSerial: test.ini to test CrawlerSerial and added parameters to lauv-nemo-1.ini to test teleoperation

--- a/etc/lauv-nemo-1.ini
+++ b/etc/lauv-nemo-1.ini
@@ -227,3 +227,14 @@ Log Events                              = false
 ## CDC3 Exercise ##
 #[Require development/cdc3/cdc3-lauv-nemo-1.ini]
 
+[CrawlerSerial]
+Enabled                                 = Always
+Entity Label                            = CrawlerSerial
+Debug Level                             = Spew
+Serial Port - Device                    = /dev/ttyACM0
+Serial Port - Baud Rate                 = 115200
+Input Timeout                           = 3.0
+
+[Test.Crawler]
+Enabled = Always
+Entity Label = Producer  
