--- a/etc/lauv-nemo-1.ini
+++ b/etc/lauv-nemo-1.ini
@@ -235,6 +235,6 @@ Serial Port - Device                    = /dev/ttyACM0
 Serial Port - Baud Rate                 = 115200
 Input Timeout                           = 3.0
 
-[Test.Crawler]
-Enabled = Always
-Entity Label = Producer  
+[Control.AUV.RemoteOperation]
+Debug Level                             = Debug
+Additional Actions                      = Lights=Axis, VolumeUp=Button, VolumeDown=Button,
