Config: debug: Update task params

--- a/etc/debug.ini
+++ b/etc/debug.ini
@@ -1,3 +1,8 @@
 [Producer]
 Enabled                                 = Always
 Entity Label                            = Producer
+Use UDP                                 = false
+UDP Port                                = 7777
+Board Port                              = 8080
+Serial Port                             = /dev/ttyACM0
+Serial Port - Baud Rate                 = 9600
