src/Producer: Merge send message methods. Make tasks only send a message after receiving one

--- a/etc/debug.ini
+++ b/etc/debug.ini
@@ -1,9 +1,9 @@
 [Producer]
 Enabled                                 = Always
 Entity Label                            = Producer
-Use UDP                                 = true
+Use UDP                                 = false
 UDP Port                                = 7777
 Board IP                                = 10.0.2.83
 Board Port                              = 8080
 Serial Port                             = /dev/ttyACM0
-Serial Port - Baud Rate                 = 9600
+Serial Port - Baud Rate                 = 115200
