config: debug.ini: Add configuration for vehicle simulation with board

--- a/etc/debug.ini
+++ b/etc/debug.ini
@@ -1,9 +1,68 @@
+
+# [Require common/imc-addresses.ini]
+# [Require auv/transports.ini]
+# [Require auv/simulator.ini]
+# [Require auv/control.ini]
+# [Require auv/navigation.ini]
+# [Require auv/maneuvers.ini]
+# [Require auv/monitors.ini]
+# [Require auv/supervisors.ini]
+# [Require auv/general.ini]
+
+# [General]
+# Vehicle                                 = lauv-simulator-1
+# Vehicle Type                            = lauv
+# Absolute Maximum Depth                  = 100
+ 
+# [Maneuver.FollowSystem]
+# Enabled                                 = Never
+ 
+# [Maneuver.FollowTrajectory]
+# Enabled                                 = Never
+ 
+# [Maneuver.VehicleFormation.SMC]
+# Enabled                                 = Never
+ 
+# [Autonomy.TextActions]
+# Enabled								 	= Never
+ 
+# [Simulators.CTD]
+# Enabled                                 = Simulation
+# Entity Label                            = CTD
+# Execution Frequency                     = 6
+ 
+# [Simulators.DVL]
+# Enabled                                 = Simulation
+# Execution Frequency                     = 5
+# Entity Label                            = DVL
+# Standard Deviation - Ground Velocity    = 0.002
+# Standard Deviation - Water Velocity     = 0.002
+# Invalid Reading Probability             = 10
+ 
+# [Simulators.IMU/AHRS]
+# Enabled                                 = Simulation
+# Entity Label                            = AHRS
+# Standard Deviation - Euler Angles       = 0.05
+# Standard Deviation - Angular Velocity   = 0.05
+# Standard Deviation - Heading Offset     = 0
+# Gyro Rate Bias                          = 0
+
+# [Simulators.DepthSensor]
+# Enabled                                 = Simulation
+# Execution Frequency                     = 10
+# Entity Label                            = Depth Sensor
+# Standard Deviation                      = 0.05
+
+# [Transports.UDP]
+# Static Destinations                     = 192.168.1.254:6001
+
+# [Transports.CommManager]
+# Enabled								 	= Never
+
 [Producer]
 Enabled                                 = Always
 Entity Label                            = Producer
-Use UDP                                 = false
-UDP Port                                = 7777
-Board IP                                = 10.0.2.83
-Board Port                              = 8080
-Serial Port                             = /dev/ttyACM0
-Serial Port - Baud Rate                 = 115200
+IO Port - Device						= udp://10.0.2.81:7777
+Input Timeout                           = 0.1
+Activation Time                         = 2
+Deactivation Time                       = 2
