Config: mcu: Update mcu config file.

--- a/etc/mcu.ini
+++ b/etc/mcu.ini
@@ -32,4 +32,5 @@
 Enabled	                = Always
 Entity Label            = MCU Supervisor
 Debug Level             = Spew
-IO Handle               = udp://10.0.2.80:5000
+IO Handle               = udp:/10.0.2.81:/7777
+Clock Sync Period (s)   = 60*10
